[project]
name = "qwen-image-df11"
description = "ComfyUI custom nodes for the DFloat11 compressed Qwen-Image model. This package provides efficient image generation with reduced memory usage through DFloat11 compression technology."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch", "diffusers>=0.28.0", "transformers", "dfloat11[cuda12]", "Pillow", "numpy"]

[project.urls]
Repository = "https://github.com/verIdyia/ComfyUI-Qwen-Image-DF11"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/verIdyia/ComfyUI-Qwen-Image-DF11/wiki"
"Bug Tracker" = "https://github.com/verIdyia/ComfyUI-Qwen-Image-DF11/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Qwen-Image-DF11"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

