[project]
name = "comfyui-qwen-image-df11"
description = "ComfyUI custom nodes for the DFloat11 compressed Qwen-Image model. Efficient image generation with 32% reduced memory via lossless DFloat11 compression."
version = "1.1.0"
license = {file = "LICENSE"}
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "torch",
    "diffusers>=0.35.0",
    "transformers>=4.51.3",
    "dfloat11[cuda12]",
    "Pillow",
    "numpy",
]

[project.urls]
Repository = "https://github.com/verIdyia/ComfyUI-Qwen-Image-DF11"
Documentation = "https://github.com/verIdyia/ComfyUI-Qwen-Image-DF11#readme"
"Bug Tracker" = "https://github.com/verIdyia/ComfyUI-Qwen-Image-DF11/issues"

[tool.comfy]
PublisherId = "veridyia"
DisplayName = "ComfyUI-Qwen-Image-DF11"
Icon = ""
includes = []
"requires-comfyui" = ">=0.3.0"
